front: header overflow fix; numero pc video height fix

--- a/front/src/Blocks/header/header.sass
+++ b/front/src/Blocks/header/header.sass
@@ -10,6 +10,9 @@ $headerLogoWidth: px_to_em(307)
       padding-top: 2em
       padding-bottom: 0.5em
       background: white
+      
+   > .devicer
+      overflow: visible
 
    &_small
       background: $-c1
