--- a/front/src/Pages/numerology/numerology.sass
+++ b/front/src/Pages/numerology/numerology.sass
@@ -47,6 +47,8 @@ body
 @media screen and ( min-width: 601px )
    .diashad_only-mobile
       display: none
+   video
+      height: 300px
 
 @media screen and ( max-width: 600px )
    .numero
